# git-branch

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: release.yml
src/: branches.rs  commands.rs  dialog.rs  error.rs  file_system.rs  main.rs  util.rs
src/branches/: branches_informations.rs  def.rs  delete.rs  head.rs  init.rs  origin.rs  utils.rs
src/commands/: branches.rs  dialog.rs
src/commits/: def.rs  utils.rs
src/dialog/: confirm.rs  selection.rs
src/file_system/: git_dir.rs
