[package]
name = "git-branch"
version = "0.1.1"
edition = "2024"
authors = ["Victor Aubinaud"]
description = "Use git-branch to manage local git branches interactively"
documentation= "https://github.com/vi17250/git-branch"
repository= "https://github.com/vi17250/git-branch"
license = "MIT"
readme = "README.md"
homepage= "https://github.com/vi17250/git-branch"

[dependencies]
console = "0.16.1"
dialoguer = "0.12.0"
truncrate = "0.1.3"
valinta = { git = "https://github.com/vi17250/valinta", version = "0.1.0" }
walkdir = "2.5.0"
